--- a/specs.html
+++ b/specs.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" href="_css/estilo.css" />
-    <link rel="stylesheet" href="_css/specs.css" />
+    <link rel="stylesheet" href="estilo.css" />
+    <link rel="stylesheet" href="specs.css" />
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="funcoes.js"></script>
 <body>
     <div id="interface">
 
@@ -17,15 +17,15 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
-            <img id="icone" src="_imagens/especificacoes.png" />
+            <img id="icone" src="especificacoes.png" />
             <nav id=menu>
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"> Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"> Home</a></li>
+                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
+                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
+                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
@@ -45,7 +45,7 @@
         <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
         <section id="conteudo">
-            <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa"/>
+            <img src="glass-esquema-marcado.jpg" usemap="#meumapa"/>
             <map name="meumapa" >
                 <area shape="rect" coords="179,202,270,260" href="google-glass.html#tela" target="janela"/>
                 <area shape="circle" coords="158,245,12" href="google-glass.html#camera" target="janela"/>
@@ -58,7 +58,7 @@
 </section>
 
 <footer id="rodape">
-    <p>Copyright &#174; 2013 - by Gustavo Guanabara <br>
+    <p>Copyright &#174; 2013 - by Grinal de Sousa Neto <br>
         <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a><a
             href="http://twitter.com/cursosemvideo" target="_blank"> /Twitter</a>
     </p>
