--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" href="_css/estilo.css" />
-    <link rel="stylesheet" href="_css/form.css" />
+    <link rel="stylesheet" href="estilo.css" />
+    <link rel="stylesheet" href="form.css" />
 
-    <script language="javascript" src="_javascript/funcoes.js"></script>
+    <script language="javascript" src="funcoes.js"></script>
     <script>
         function calc_total() {
             var qtd = parseInt(document.getElementById('cQtd').value);
@@ -25,15 +25,15 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
-            <img id="icone" src="_imagens/contato.png" />
+            <img id="icone" src="contato.png" />
             <nav id=menu>
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"> Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"> Home</a></li>
+                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
+                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
+                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
@@ -105,13 +105,13 @@
                         <input type="text" name="tTot" id="cTot" placeholder="Total a Pagar" readonly/></p>
                     </fieldset>
                 
-                    <input type="image" name="tEnviar" src="_imagens/botao-enviar.png"/>
+                    <input type="image" name="tEnviar" src="botao-enviar.png"/>
                 </form>
             </article>
         </section>
 
 <footer id="rodape">
-    <p>Copyright &#174; 2013 - by Gustavo Guanabara <br>
+    <p>Copyright &#174; 2013 - by por Grinal de Sousa Neto em curso com Gostavo Guanabara <br>
         <a href="http://facebook.com/cursosemvideo" target="_blank" >Facebook</a><a href="http://twitter.com/cursosemvideo" target="_blank"> /Twitter</a>
     </p>
 </footer>
