--- a/fotos.html
+++ b/fotos.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" href="_css/estilo.css" />
-    <link rel="stylesheet" href="_css/fotos.css" />
+    <link rel="stylesheet" href="estilo.css" />
+    <link rel="stylesheet" href="fotos.css" />
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="funcoes.js"></script>
 <body>
     <div id="interface">
 
@@ -17,15 +17,15 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
-            <img id="icone" src="_imagens/fotos.png" />
+            <img id="icone" src="fotos.png" />
             <nav id=menu>
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html"> Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('fotos.png')"><a href="index.html"> Home</a></li>
+                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('fotos.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
+                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('fotos.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('fotos.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
+                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('fotos.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
@@ -36,7 +36,7 @@
             <hgroup>
                 <h3>Glass > Fotos</h3>
                 <h1>Galeria de Imagens do Google Glass</h1>
-                <h2>por Gostavo Guanabara</h2>
+                <h2>por Grinal de Sousa Neto em curso com Gostavo Guanabara</h2>
                 <h3 class="direita">atualizado em 01/Maio/2013</h3>
             </hgroup>
         </header>
@@ -58,7 +58,7 @@
 </section>
 
 <footer id="rodape">
-    <p>Copyright &#174; 2013 - by Gustavo Guanabara <br>
+    <p>Copyright &#174; 2013 - por Grinal de Sousa Neto em curso com Gostavo Guanabara <br>
         <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a><a href="http://twitter.com/cursosemvideo" target="_blank"> /Twitter</a>
     </p>
 </footer>
