--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -29,11 +29,11 @@
             <nav id=menu>
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"> Home</a></li>
-                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
-                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
-                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('contato.png')"><a href="index.html"> Home</a></li>
+                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('contato.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
+                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('contato.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('contato.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
+                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('contato.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
