--- a/google-glass.html
+++ b/google-glass.html
@@ -44,7 +44,7 @@
         <head>
             <h2>Clique sobre as áreas destacadas em vermelho</h2>
         </head>
-        <img src="_imagens/mao.png" alt="Mão apontando para a esquerda"/>
+        <img src="mao.png" alt="Mão apontando para a esquerda"/>
     </article>
 
     <article id="tela">
@@ -57,7 +57,7 @@
             superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
             selecionar
             opções com o movimento da cabeça.</p>
-        <img src="_imagens/det-tela.jpg" alt="Tela do Google Glass"/>
+        <img src="det-tela.jpg" alt="Tela do Google Glass"/>
     </article>
 
     <article id="camera">
@@ -66,7 +66,7 @@
             <h1>Câmera</h1>
             <h2>Filme e fotografe a qualquer momento</h2>
         </head>
-        <img src="_imagens/det-camera.jpg" class="img-dir" alt="Câmera do Google Glass"/>
+        <img src="det-camera.jpg" class="img-dir" alt="Câmera do Google Glass"/>
         <p>Com o Google Glass será possível tirar fotos com até 5 megapixels e gravar vídeos com 720 linhas de
             resolução. Os
             primeiros vídeos e fotos capturados com o aparelho já começaram a circular pela rede, mas até agora ninguém
@@ -84,7 +84,7 @@
             se engana redondamente. O dispositivo vem com vários tipos de sensores e microfones embutidos. Assim, para
             dar
             um comando, basta falar ou passar o dedo na lateral do óculos.</p>
-        <img src="_imagens/det-touch.jpg" alt="Sensores do Google Glass"/>
+        <img src="det-touch.jpg" alt="Sensores do Google Glass"/>
     </article>
 
     <article id="gadgets">
@@ -93,7 +93,7 @@
             <h1>Bateria e Gadgets </h1>
             <h2>Quais são os dispositivos que complementam o Glass </h2>
         </head>
-            <img src="_imagens/det-bateria.jpg" class="img-dir" alt="Bateria e Gadgets do Google Glass"/>
+            <img src="det-bateria.jpg" class="img-dir" alt="Bateria e Gadgets do Google Glass"/>
         <p>Segundo a própria Google, o Glass virá com uma bateria que tem autonomia suficiente para durar um dia inteiro. Apenas algumas atividades como
             videoconferências e longas filmagens vão exigir um pouco mais. Além disso ele vem com WiFi, Bluetooth, 3G/4G e muito mais.</p>
     </article>
