--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" href="_css/estilo.css" />
+    <link rel="stylesheet" href="estilo.css" />
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="funcoes.js"></script>
 <body>
     <div id="interface">
 
@@ -16,15 +16,15 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png" />
+            <img id="icone" src="glass-oculos-preto-peq.png" />
             <nav id=menu>
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html"> Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="index.html"> Home</a></li>
+                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
+                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
+                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
@@ -35,7 +35,7 @@
             <hgroup>
                 <h3>Tecnilogia> &nbsp; Inovações</h3>
                 <h1>Saiba tudo sobre o Google Glass</h1>
-                <h2>por Gostavo Guanabara</h2>
+                <h2>por Grinal de Sousa Neto em curso com Gostavo Guanabara</h2>
                 <h3 class="direita">atualizado em 23/Abril/2013</h3>
             </hgroup>
             </header>
@@ -55,7 +55,7 @@
                 novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
             <figure class="foto-legenda">
-                <img src="_imagens/glass-quadro-homem-mulher.jpg" />
+                <img src="glass-quadro-homem-mulher.jpg" />
                 <figcaption>
                     <h1>Glass rope</h1>
                     <p>
@@ -93,10 +93,10 @@
             </p>
 
             <div>
-                <video id="filme-esq" controls="controls" poster="_imagens/video-mini01.jpg">
-                    <source src="_media/getting-started.mp4" type="video/mp4"/>
-                    <source src="_media/getting-started.webm" type="video/webm"/>
-                    <source src="_media/getting-started.ogv" type="video/ogg"/>
+                <video id="filme-esq" controls="controls" poster="video-mini01.jpg">
+                    <source src="getting-started.mp4" type="video/mp4"/>
+                    <source src="getting-started.webm" type="video/webm"/>
+                    <source src="getting-started.ogv" type="video/ogg"/>
                     Desculpe, mas não foi possível carregar o vídeo
                </video>
             </div>
@@ -108,9 +108,9 @@
 
             <div>
                 <video id="filme-dir" controls="controls" poster="_imagens/video-mini02.jpg">
-                    <source src="_media/getting-started.mp4" type="video/mp4"/>
-                    <source src="_media/getting-started.webm" type="video/webm"/>
-                    <source src="_media/getting-started.ogv" type="video/ogg"/>
+                    <source src="getting-started.mp4" type="video/mp4"/>
+                    <source src="getting-started.webm" type="video/webm"/>
+                    <source src="getting-started.ogv" type="video/ogg"/>
                     Desculpe, mas não foi possível carregar o vídeo
                </video>
             </div>
@@ -131,7 +131,7 @@
                 metros de distância do espectador.</p>
         </aside>
         <footer id="rodape">
-            <p>Copyright &#174; 2013 - by Gustavo Guanabara <br>
+            <p>Copyright &#174; 2013 - por Grinal de Sousa Neto em curso com Gostavo Guanabara <br>
                 <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a><a href="http://twitter.com/cursosemvideo" target="_blank"> /Twitter</a>
             </p>
         </footer>
