--- a/specs.html
+++ b/specs.html
@@ -21,11 +21,11 @@
             <nav id=menu>
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"> Home</a></li>
-                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
-                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
-                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('especificacoes.png')"><a href="index.html"> Home</a></li>
+                    <li onmouseover="mudaFoto('especificacoes.png')" onmouseout="mudaFoto('especificacoes.png')"><a href="index.html"><a href="specs.html"> Especificações</a></li>
+                    <li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('especificacoes.png')"><a href="index.html"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('multimidia.png')" onmouseout="mudaFoto('especificacoes.png')"><a href="index.html"><a href="multimidia.html"> Multimídia</a></li>
+                    <li onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('especificacoes.png')"><a href="index.html"><a href="fale-conosco.html"> Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
@@ -58,7 +58,7 @@
 </section>
 
 <footer id="rodape">
-    <p>Copyright &#174; 2013 - by Grinal de Sousa Neto <br>
+    <p>Copyright &#174; 2013 - por Grinal de Sousa Neto em curso com Gostavo Guanabara <br>
         <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a><a
             href="http://twitter.com/cursosemvideo" target="_blank"> /Twitter</a>
     </p>
