--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" href="estilo.css" />
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <script language="javascript" src="funcoes.js"></script>
 <body>
