--- a/fotos.html
+++ b/fotos.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" href="estilo.css" />
-    <link rel="stylesheet" href="fotos.css" />
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="fotos.css">
 </head>
 <script language="javascript" src="funcoes.js"></script>
 <body>
@@ -17,7 +17,7 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
-            <img id="icone" src="fotos.png" />
+            <img id="icone" src="fotos.png">
             <nav id=menu>
                 <h1>Menu Principal</h1>
                 <ul type="disc">
